--- a/Web Assignment/About.html
+++ b/Web Assignment/About.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Floral Bouquet</title>
-  <link rel="stylesheet" href="Main.css">
+  <link rel="stylesheet" href="About.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -31,14 +31,23 @@
 
   <section class="about">
     <div class="about-content">
-      <h3 class="content">
-        Welcome to Flower Bouquet!<br><br>
-        We believe that every bouquet tells a story. Our flower arrangements are carefully crafted to celebrate life's
-        beautiful moments, from birthdays and anniversaries to simple acts of love and appreciation.<br><br>
-        Sourcing the freshest, most vibrant blooms, we design bouquets that bring joy, elegance, and warmth to every
-        setting. Our team is dedicated to creating bouquets that speak to the heart. Let us help you make every occasion
-        unforgettable with the timeless beauty of flowers.
-      </h3>
+      <section class="ListProduct">
+        <div class="ann-content">
+            <h2 class="title1">Meet the team!</h2>
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="luqman.jpg" alt="Luqman Image">
+                    <h3>Luqman Hakim bin Ifnu Hakim</h3>
+                    <h5>22010054</h5>
+                </div>
+                <div class="gallery-item">
+                    <img src="anniversary1.jpg" alt="Anniversary Image">
+                    <h3>Muhammad Al Khaliq bin Baba</h3>
+                    <h5>22010093</h5>
+                </div>  
+            </div>
+        </div>
+      </section>
       <p>"Where Every Bouquet Blossoms with Meaning."</p>
     </div>
   </section>
