--- a/Web Assignment/Service.html
+++ b/Web Assignment/Service.html
@@ -51,31 +51,31 @@
               <button class="add-to-cart" data-price="49.99">Add to Cart</button>
           </div>
           <div class="gallery-item">
-              <img src="anniversary1.jpg" alt="Anniversary Image">
+              <img src="ann2.jpg" alt="Anniversary Image">
               <h3>Lily Bundle</h3>
               <h5>RM 59.99</h5>
               <button class="add-to-cart" data-price="59.99">Add to Cart</button>
           </div>
           <div class="gallery-item">
-              <img src="anniversary1.jpg" alt="Anniversary Image">
+              <img src="ann3.jpg" alt="Anniversary Image">
               <h3>Mixed Flowers</h3>
               <h5>RM 44.99</h5>
               <button class="add-to-cart" data-price="44.99">Add to Cart</button>
           </div>
           <div class="gallery-item">
-              <img src="anniversary1.jpg" alt="Anniversary Image">
+              <img src="ann4.jpg" alt="Anniversary Image">
               <h3>Tulip Special</h3>
               <h5>RM 39.99</h5>
               <button class="add-to-cart" data-price="39.99">Add to Cart</button>
           </div>
           <div class="gallery-item">
-              <img src="anniversary1.jpg" alt="Anniversary Image">
+              <img src="ann5.jpg" alt="Anniversary Image">
               <h3>Orchid Delight</h3>
               <h5>RM 69.99</h5>
               <button class="add-to-cart" data-price="69.99">Add to Cart</button>
           </div>
           <div class="gallery-item">
-              <img src="anniversary1.jpg" alt="Anniversary Image">
+              <img src="ann6.jpg" alt="Anniversary Image">
               <h3>Sunflower Joy</h3>
               <h5>RM 54.99</h5>
               <button class="add-to-cart" data-price="54.99">Add to Cart</button>
